# mod_audio_fork_twilio

./: .gitmodules  Dockerfile  README.md
files/: configure.ac.extra  modules.conf.in.extra  modules.conf.vanilla.xml.extra  modules.conf.xml
mod_audio_fork_twilio/: Makefile.am  audio_pipe.cpp  audio_pipe.hpp  lws_glue.cpp  lws_glue.h  mod_audio_fork_twilio.c  mod_audio_fork_twilio.h  parser.cpp  parser.hpp  twilio_helper.cpp  twilio_helper.hpp
